# text2sqlai

./: .env.example  .gitignore  Makefile  README.md  example_queries.sql  pyproject.toml  requirements.txt  seed_data.py  setup_github.sh  streamlit_app.py
.devcontainer/: devcontainer.json
app/: streamlit_app.py
config/: config.py  env.template  requirements.txt
deployments/azure/: README.md  azure-deploy.yml  deploy-to-aci.sh  deploy-to-appservice.sh  quick-deploy.sh
docker/: Dockerfile  README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh
eval/: __init__.py  benchmark.py  evaluator.py  report_generator.py
eval/datasets/: dataset_loader.py
eval/datasets/custom/: demo_dataset.json
eval/datasets/spider/: README.md
eval/datasets/wikisql/: README.md
eval/metrics/: __init__.py  component_metrics.py  execution_metrics.py  sql_metrics.py
scripts/: evaluation_ui.py  run_evaluation.py
src/cli/: ask.py
src/db/: connect.py  introspect.py  seed_demo.py
src/eval/: evaluate.py  metrics.py  run_report.py
src/nlp/: fewshots.py  generator.py  prompt.py  safety.py
src/service/: server.py  ui_streamlit.py
src/utils/: exceptions.py  logger.py
